fixed icon alignment issues

--- a/src/frontend/ai-reviewer-admin/src/domain/documents/DocumentList.scss
+++ b/src/frontend/ai-reviewer-admin/src/domain/documents/DocumentList.scss
@@ -24,11 +24,17 @@
     margin-right: 10px;
     vertical-align: top;
   }
+  .col.add-row {
+    padding-left: 5px;
+  }
+  button {
+    padding: 0px;
+  }
 
   .ai-reviewer-icon {
     color:#FCBA19;
     margin-left: 8px;
-    font-size: 28px;
+    font-size: 24px;
   }
 
   .ai-reviewer-icon-button, .ai-reviewer-icon-button:hover {
@@ -41,6 +47,10 @@
       text-align: right;
     }
   }
+  .delete-icon {
+    margin-top: 2px;
+  }
+
   .delete-icon:hover {
     color: red;
     cursor: pointer;
